@@ -1,20 +1,21 @@
 package gov.nasa.ziggy.pipeline.xml;
 
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
 import javax.xml.XMLConstants;
-import jakarta.xml.bind.JAXBContext;
-import jakarta.xml.bind.JAXBException;
-import jakarta.xml.bind.Marshaller;
-import jakarta.xml.bind.Unmarshaller;
 import javax.xml.validation.Schema;
 import javax.xml.validation.SchemaFactory;
 
 import org.xml.sax.SAXException;
 
 import gov.nasa.ziggy.services.config.DirectoryProperties;
+import jakarta.xml.bind.JAXBContext;
+import jakarta.xml.bind.JAXBException;
+import jakarta.xml.bind.Marshaller;
+import jakarta.xml.bind.Unmarshaller;
 
 /**
  * Implements JAXB marshaller and unmarshaller that performs validation against an appropriate XML
@@ -30,12 +31,13 @@ public class ValidatingXmlManager<T extends HasXmlSchemaFilename> {
     private final Marshaller marshaller;
 
     public ValidatingXmlManager(Class<T> clazz)
-        throws InstantiationException, IllegalAccessException, SAXException, JAXBException {
+			throws InstantiationException, IllegalAccessException, SAXException, JAXBException,
+			IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
 
         // Generate a schema for validation
         SchemaFactory schemaFactory = SchemaFactory.newInstance(XMLConstants.W3C_XML_SCHEMA_NS_URI);
         String ziggySchemaDir = DirectoryProperties.ziggySchemaDir().toString();
-        String schemaFilename = clazz.newInstance().getXmlSchemaFilename();
+		String schemaFilename = clazz.getDeclaredConstructor().newInstance().getXmlSchemaFilename();
         Path schemaPath = Paths.get(ziggySchemaDir, "xml", schemaFilename);
         Schema schema = schemaFactory.newSchema(schemaPath.toFile());
 
