@@ -27,7 +27,7 @@ public enum OperatingSystemType {
     private final Class<? extends CpuInfo> cpuInfoClass;
     private final Class<? extends ProcInfo> procInfoClass;
 
-    private OperatingSystemType(String name, String sharedObjectPathEnvVar,
+    OperatingSystemType(String name, String sharedObjectPathEnvVar,
         Class<? extends MemInfo> memInfoClass, Class<? extends CpuInfo> cpuInfoClass,
         Class<? extends ProcInfo> procInfoClass) {
         this.name = name;
@@ -54,11 +54,11 @@ public enum OperatingSystemType {
     }
 
     public CpuInfo getCpuInfo() throws Exception {
-        return cpuInfoClass.newInstance();
+		return cpuInfoClass.getDeclaredConstructor().newInstance();
     }
 
     public MemInfo getMemInfo() throws Exception {
-        return memInfoClass.newInstance();
+		return memInfoClass.getDeclaredConstructor().newInstance();
     }
 
     public ProcInfo getProcInfo(long pid) throws Exception {
@@ -68,7 +68,7 @@ public enum OperatingSystemType {
     }
 
     public ProcInfo getProcInfo() throws Exception {
-        return procInfoClass.newInstance();
+		return procInfoClass.getDeclaredConstructor().newInstance();
     }
 
     public static final OperatingSystemType byName(String name) {
